@@ -9,6 +9,8 @@ main-menu (0.051) UNRELEASED; urgency=low
     - Fix a buffer overflow in menu_entry() when language contains an
       underscore and the package description was not translated into
       this language.
+    - Package descriptions could not be translated if LANGUAGE setting
+      contains any colon, which is a quite common case.
 
  -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 22:56:09 -0500
 
